--- a/frontend/src/components/About.css
+++ b/frontend/src/components/About.css
@@ -8,7 +8,7 @@
   font-family: 'Arial', sans-serif;
   background-color: #111;
   color: #f4f4f4;
-  padding: 20px;
+  padding: auto auto;
   position: relative;
   overflow: hidden;
 }
@@ -53,7 +53,7 @@
 
 .about-text span {
   font-weight: bold;
-  color: #f0a500;
+  color: #6a19ff;
 }
 
 .about-image-container {
