--- a/frontend/src/components/Skills.css
+++ b/frontend/src/components/Skills.css
@@ -36,7 +36,7 @@
   background-color: #333;
   border-radius: 20px;
   overflow: hidden;
-  box-shadow: inset 0px 0px 8px rgba(0, 0, 0, 0.7);
+  box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.7);
 }
 
 .skill-level {
@@ -61,17 +61,12 @@
 
 .leetcode-container {
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+  flex-direction: row;
   gap: 20px;
-  background-color: #222;
-  padding: 30px;
-  border-radius: 20px;
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.6);
+  width: 50%;
 }
 
 .leetcode-solved,
-.leetcode-difficulty,
 .leetcode-badges,
 .leetcode-submissions {
   padding: 15px;
@@ -79,10 +74,32 @@
   border-radius: 15px;
   flex: 1;
   text-align: center;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   transition: transform 0.2s ease;
   min-height: 100px;
   max-height: 100px;
+}
+
+.leetcode-difficulty {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: #333;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  transition: transform 0.2s ease;
+  padding: 20px;
+  width: 100%;
+  box-sizing: border-box;
+}
+.leetcode-inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 .leetcode-solved,
